# solace-ai-connector-slack

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
docs/components/: slack_output.md
src/solace_ai_connector_slack/components/: slack_base.py  slack_input.py  slack_output.py
