[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "solace_ai_connector_slack"
dynamic = ["version"]
authors = [
  { name="Edward Funnekotter", email="edward.funnekotter@solace.com" },
]
description = "Slack plugin for the Solace AI Connector - this provides an input and output component to talk to Slack"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0.1",
    "slack_bolt>=1.18.1",
    "solace_ai_connector>=0.1.1",
]

[project.urls]
homepage = "https://github.com/SolaceLabs/solace-ai-connector-slack"
repository = "https://github.com/SolaceLabs/solace-ai-connector-slack"
documentation = "https://github.com/SolaceLabs/solace-ai-connector-slack/blob/main/docs/index.md"


[tool.hatch.build.targets.wheel]
packages = ["src/solace_ai_connector_slack"]

[tool.hatch.version]
path = "src/solace_ai_connector_slack/components/__init__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.2.2",
  "coverage>=7.5.4",
  "twine>=5.1.1",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "ruff>=0.5.0",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F"]
lint.ignore = ["F401", "E731"]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.12"]